========================================
Change log for mod_hotpot
========================================

2025-05-03 (52)
 - modify db/subplugins.json for compatability with MDL-83705 and Moodle >= 5.x

2024-02-10 (51)
 - fix link to user on function to 'get_recent_mod_activity()'

2024-02-10 (50)
 - for compatability with Moodle 4.x, we hide the legacy event functions, and user_picture::fields

2022-09-15 (48)
 - fix error caused by NULL intro field

2022-09-06 (47)
 - fix compatibility with PHP 8.x and Moodle 4.x (1) remove use of curly braces on strings; (2) add 'intro' and 'introformat' fields; (3) use custom version of utf8_to_entities() that does not convert strings to lowercase;

2021-09-14 (46)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2020-06-05 (44)
 - mod/hotpot convert URLs in 'src' attribute of <audio> and <video> tags

2020-03-01 (43)
 - include current version in tool to redo upgrade

2019-10-12 (41)
 - msd_hotpot standardize layout and spelling in CHANGES.txt

2019-07-28 (40)
 - add db/subplugins.json for compatability with Moodle >= 3.8

2019-07-17 (39)
 - separate '<?' to '< ?' so that it is not mistaken for a PHP short tag

2019-05-30 (38)
 - remove 'continue' statement inside SWITCH block

2019-04-05 (37)
 - add comments about events_trigger availability

2019-03-30 (36)
 - ensure 'modname' is defined when creating new activities in Moodle >= 3.5

2019-02-13 (35)
 - fix URL of secondary zip download site

2019-02-13 (35)
 - fix force_update tool for compatability with Moodle >= 2.7

2019-01-21 (34)
 - remove use of 'events_trigger' for compatability with Moodle 3.6

2019-01-21 (33)
 - (1) CONTRIB-7098 fix 'non-numeric value' warning in PHP 7.1; (2) fix 'cannotexecduringupgrade' error when modifying HotPot grades during Moodle upgrade

2018-12-08 (32)
 - remove misplaced 'use' line in main privacy file for HotPot module

2018-12-07 (31)